# stork

./: .gitignore  Cargo.toml  README.md  index.html  style.css
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: links.rs  main.rs  os.rs
src/app/: router.rs
src/components/: add_form.rs  form_error.rs  link.rs  link_list.rs  mod.rs  navigation.rs
src/models/: link.rs
