[package]
name = "stork-links"
version = "0.0.0"
authors = ["Michał Strzelczyk"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde-wasm-bindgen = "0.4.3"
js-sys = "0.3.59"
serde = { version = "1.0.140", features = ["derive", "rc"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
web-sys = "0.3.59"
yew = { version = "0.20", features = ["csr"]}
yew-router = "0.17"

[workspace]
members = ["src-tauri"]
